@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -23,7 +23,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -34,11 +33,12 @@ import org.influxdb.dto.Point;
 import org.influxdb.dto.Pong;
 import org.influxdb.dto.Query;
 import org.influxdb.dto.QueryResult;
+import org.openhab.persistence.influxdb.internal.FilterCriteriaQueryCreator;
 import org.openhab.persistence.influxdb.internal.InfluxDBConfiguration;
+import org.openhab.persistence.influxdb.internal.InfluxDBMetadataService;
 import org.openhab.persistence.influxdb.internal.InfluxDBRepository;
 import org.openhab.persistence.influxdb.internal.InfluxPoint;
-import org.openhab.persistence.influxdb.internal.InfluxRow;
-import org.openhab.persistence.influxdb.internal.UnnexpectedConditionException;
+import org.openhab.persistence.influxdb.internal.UnexpectedConditionException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -53,12 +53,14 @@ import org.slf4j.LoggerFactory;
 @NonNullByDefault
 public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
     private final Logger logger = LoggerFactory.getLogger(InfluxDB1RepositoryImpl.class);
-    private InfluxDBConfiguration configuration;
-    @Nullable
-    private InfluxDB client;
+    private final InfluxDBConfiguration configuration;
+    private final InfluxDBMetadataService influxDBMetadataService;
+    private @Nullable InfluxDB client;
 
-    public InfluxDB1RepositoryImpl(InfluxDBConfiguration configuration) {
+    public InfluxDB1RepositoryImpl(InfluxDBConfiguration configuration,
+            InfluxDBMetadataService influxDBMetadataService) {
         this.configuration = configuration;
+        this.influxDBMetadataService = influxDBMetadataService;
     }
 
     @Override
@@ -79,12 +81,15 @@ public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
 
     @Override
     public void disconnect() {
+        final InfluxDB currentClient = client;
+        if (currentClient != null) {
+            currentClient.close();
+        }
         this.client = null;
     }
 
     @Override
     public boolean checkConnectionStatus() {
-        boolean dbStatus = false;
         final InfluxDB currentClient = client;
         if (currentClient != null) {
             try {
@@ -92,30 +97,23 @@ public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
                 String version = pong.getVersion();
                 // may be check for version >= 0.9
                 if (version != null && !version.contains("unknown")) {
-                    dbStatus = true;
                     logger.debug("database status is OK, version is {}", version);
+                    return true;
                 } else {
                     logger.warn("database ping error, version is: \"{}\" response time was \"{}\"", version,
                             pong.getResponseTime());
-                    dbStatus = false;
                 }
             } catch (RuntimeException e) {
-                dbStatus = false;
-                logger.error("database connection failed", e);
-                handleDatabaseException(e);
+                logger.warn("database error: {}", e.getMessage(), e);
             }
         } else {
             logger.warn("checkConnection: database is not connected");
         }
-        return dbStatus;
-    }
-
-    private void handleDatabaseException(Exception e) {
-        logger.warn("database error: {}", e.getMessage(), e);
+        return false;
     }
 
     @Override
-    public void write(InfluxPoint point) {
+    public void write(InfluxPoint point) throws UnexpectedConditionException {
         final InfluxDB currentClient = this.client;
         if (currentClient != null) {
             Point clientPoint = convertPointToClientFormat(point);
@@ -125,26 +123,23 @@ public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
         }
     }
 
-    private Point convertPointToClientFormat(InfluxPoint point) {
+    private Point convertPointToClientFormat(InfluxPoint point) throws UnexpectedConditionException {
         Point.Builder clientPoint = Point.measurement(point.getMeasurementName()).time(point.getTime().toEpochMilli(),
                 TimeUnit.MILLISECONDS);
-        setPointValue(point.getValue(), clientPoint);
-        point.getTags().entrySet().forEach(e -> clientPoint.tag(e.getKey(), e.getValue()));
-        return clientPoint.build();
-    }
-
-    private void setPointValue(@Nullable Object value, Point.Builder point) {
+        Object value = point.getValue();
         if (value instanceof String) {
-            point.addField(FIELD_VALUE_NAME, (String) value);
+            clientPoint.addField(FIELD_VALUE_NAME, (String) value);
         } else if (value instanceof Number) {
-            point.addField(FIELD_VALUE_NAME, (Number) value);
+            clientPoint.addField(FIELD_VALUE_NAME, (Number) value);
         } else if (value instanceof Boolean) {
-            point.addField(FIELD_VALUE_NAME, (Boolean) value);
+            clientPoint.addField(FIELD_VALUE_NAME, (Boolean) value);
         } else if (value == null) {
-            point.addField(FIELD_VALUE_NAME, (String) null);
+            clientPoint.addField(FIELD_VALUE_NAME, "null");
         } else {
-            throw new UnnexpectedConditionException("Not expected value type");
+            throw new UnexpectedConditionException("Not expected value type");
         }
+        point.getTags().forEach(clientPoint::tag);
+        return clientPoint.build();
     }
 
     @Override
@@ -153,58 +148,47 @@ public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
         if (currentClient != null) {
             Query parsedQuery = new Query(query, configuration.getDatabaseName());
             List<QueryResult.Result> results = currentClient.query(parsedQuery, TimeUnit.MILLISECONDS).getResults();
-            return convertClientResutToRepository(results);
+            return convertClientResultToRepository(results);
         } else {
             logger.warn("Returning empty list because queryAPI isn't present");
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
-    private List<InfluxRow> convertClientResutToRepository(List<QueryResult.Result> results) {
+    private List<InfluxRow> convertClientResultToRepository(List<QueryResult.Result> results) {
         List<InfluxRow> rows = new ArrayList<>();
         for (QueryResult.Result result : results) {
-            List<QueryResult.Series> seriess = result.getSeries();
+            List<QueryResult.Series> allSeries = result.getSeries();
             if (result.getError() != null) {
                 logger.warn("{}", result.getError());
                 continue;
             }
-            if (seriess == null) {
+            if (allSeries == null) {
                 logger.debug("query returned no series");
             } else {
-                for (QueryResult.Series series : seriess) {
-                    logger.trace("series {}", series.toString());
-                    List<List<@Nullable Object>> valuess = series.getValues();
-                    if (valuess == null) {
+                for (QueryResult.Series series : allSeries) {
+                    logger.trace("series {}", series);
+                    String defaultItemName = series.getName();
+                    List<List<Object>> allValues = series.getValues();
+                    if (allValues == null) {
                         logger.debug("query returned no values");
                     } else {
                         List<String> columns = series.getColumns();
                         logger.trace("columns {}", columns);
                         if (columns != null) {
-                            Integer timestampColumn = null;
-                            Integer valueColumn = null;
-                            Integer itemNameColumn = null;
-                            for (int i = 0; i < columns.size(); i++) {
-                                String columnName = columns.get(i);
-                                if (columnName.equals(COLUMN_TIME_NAME_V1)) {
-                                    timestampColumn = i;
-                                } else if (columnName.equals(COLUMN_VALUE_NAME_V1)) {
-                                    valueColumn = i;
-                                } else if (columnName.equals(TAG_ITEM_NAME)) {
-                                    itemNameColumn = i;
-                                }
-                            }
-                            if (valueColumn == null || timestampColumn == null) {
+                            int timestampColumn = columns.indexOf(COLUMN_TIME_NAME_V1);
+                            int valueColumn = columns.indexOf(COLUMN_VALUE_NAME_V1);
+                            int itemNameColumn = columns.indexOf(TAG_ITEM_NAME);
+                            if (valueColumn == -1 || timestampColumn == -1) {
                                 throw new IllegalStateException("missing column");
                             }
-                            for (int i = 0; i < valuess.size(); i++) {
-                                Double rawTime = (Double) Objects.requireNonNull(valuess.get(i).get(timestampColumn));
+                            for (List<Object> valueObject : allValues) {
+                                Double rawTime = (Double) valueObject.get(timestampColumn);
                                 Instant time = Instant.ofEpochMilli(rawTime.longValue());
-                                @Nullable
-                                Object value = valuess.get(i).get(valueColumn);
-                                var currentI = i;
-                                String itemName = Optional.ofNullable(itemNameColumn)
-                                        .flatMap(inc -> Optional.ofNullable((String) valuess.get(currentI).get(inc)))
-                                        .orElse(series.getName());
+                                Object value = valueObject.get(valueColumn);
+                                String itemName = itemNameColumn == -1 ? defaultItemName
+                                        : Objects.requireNonNullElse((String) valueObject.get(itemNameColumn),
+                                                defaultItemName);
                                 logger.trace("adding historic item {}: time {} value {}", itemName, time, value);
                                 rows.add(new InfluxRow(time, itemName, value));
                             }
@@ -219,5 +203,10 @@ public class InfluxDB1RepositoryImpl implements InfluxDBRepository {
     @Override
     public Map<String, Integer> getStoredItemsCount() {
         return Collections.emptyMap();
+    }
+
+    @Override
+    public FilterCriteriaQueryCreator createQueryCreator() {
+        return new InfluxDB1FilterCriteriaQueryCreatorImpl(configuration, influxDBMetadataService);
     }
 }
